fix overflow issues

--- a/src/scenes/main.css
+++ b/src/scenes/main.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   display: flex;
 }
@@ -26,4 +26,8 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+} */
+
+body {
+  overflow-x: hidden;
 }
